# draffity

./: .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.es.md  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  commitlint.config.js  eslint.config.mjs  package.json  pnpm-lock.yaml
.atl/: skill-registry.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-whisper.yml  ci.yml  release.yml
apps/desktop/: Cargo.toml  package.json  tauri.conf.json
apps/desktop/capabilities/: default.json
apps/desktop/examples/: fixture_epub.rs
apps/desktop/icons/: README.md
apps/desktop/src/: error.rs  events.rs  lib.rs  logging.rs  main.rs  state.rs
apps/desktop/src/commands/: ai.rs  backup.rs  bibliography.rs  codex.rs  collections.rs  custom_fields.rs  document.rs  export.rs  import.rs  labels.rs  media.rs  mod.rs  project.rs  search.rs  system.rs  templates.rs  validators.rs  voice.rs
apps/desktop/src/domain/: ai_history.rs  ai_validation.rs  citation.rs  codex.rs  collection.rs  custom_field.rs  document.rs  label.rs  media.rs  mod.rs  project.rs  search.rs  snapshot.rs  stats.rs  template.rs
apps/desktop/src/migrations/: 001_init.sql  002_fts.sql  003_status_tags.sql  004_goals.sql  005_synopsis.sql  006_doc_json.sql  007_citations.sql  009_codex.sql  010_media.sql  011_daily_writing.sql  012_ai_history.sql  013_ai_validations.sql  014_voice_notes.sql  015_collections.sql  016_labels.sql  017_custom_metadata.sql  018_research.sql  019_project_deadline.sql  020_session_targets.sql  021_front_back_matter.sql
apps/desktop/src/services/: ai.rs  ai_openrouter.rs  ai_prompts.rs  ai_validators.rs  asr.rs  backup.rs  bibliography.rs  crash_reporter.rs  factory.rs  media.rs  memory.rs  mod.rs  project_manager.rs  resources.rs  retention_policy.rs  secrets.rs  sidecar.rs  storage.rs  templates.rs  token_counter.rs  tts.rs  user_templates.rs  validation_context.rs
apps/desktop/src/services/exporter/: compile.rs  config.rs  docx.rs  docx_helpers.rs  epub.rs  footnotes.rs  markdown.rs  media_bundle.rs  mod.rs  pdf.rs  util.rs
apps/desktop/src/services/importer/: docx.rs  markdown.rs  mod.rs
apps/desktop/src/services/storage/: ai_history.rs  ai_validations.rs  citations.rs  codex.rs  collections.rs  custom_fields.rs  document_positions.rs  document_tags.rs  documents.rs  import_seed.rs  labels.rs  media.rs  mod.rs  projects.rs  row_mappers.rs  search.rs  settings.rs  snapshots.rs  stats.rs  template_seed.rs
apps/desktop/src/services/voice/: accel.rs  catalog.rs  download.rs  mod.rs  piper.rs  proc.rs  registry.rs  server.rs  stream.rs  stream_manager.rs  stream_planner.rs  whisper.rs
apps/desktop/tests/: codex_integration.rs  round_trip_integration.rs  storage_integration.rs
apps/ui/: index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/ui/e2e/: a11y.spec.ts  dashboard.spec.ts  fixtures.ts  onboarding.spec.ts  project-views.spec.ts
apps/ui/public/: pcm-worklet.js
apps/ui/src/: App.vue  components.d.ts  env.d.ts  main.ts
apps/ui/src/audio/: formatElapsed.test.ts  formatElapsed.ts  pcm.test.ts  pcm.ts  useAudioRecorder.ts  useStreamingCapture.ts  useVoiceRecorder.test.ts  useVoiceRecorder.ts  wav.test.ts  wav.ts
apps/ui/src/components/: AiInlinePanel.vue  AppBreadcrumb.test.ts  AppBreadcrumb.vue  AppRail.test.ts  AppRail.vue  AppShell.vue  AppStatusBar.test.ts  AppStatusBar.vue  AppTopBar.vue  AppVersion.vue  BibliographyDialog.vue  Binder.vue  CitationPickerDialog.vue  CodexEntryCard.vue  CodexEntryDialog.vue  CodexRefPickerDialog.vue  CollectionEditorDialog.vue  CollectionsPanel.vue  CommandPalette.test.ts  CommandPalette.vue  CustomFieldsEditor.test.ts  CustomFieldsEditor.vue  CustomFieldsManagerDialog.vue  DictationFab.test.ts  DictationFab.vue  DictationOverlay.test.ts  DictationOverlay.vue  DictationSettings.test.ts  DictationSettings.vue  ExportDialog.vue  FindReplaceBar.vue  FootnoteDialog.vue  GoalProgress.vue  Inspector.vue  KeybindingsEditor.vue  LabelChips.test.ts  LabelChips.vue  LabelManagerDialog.vue  LegalDialog.vue  NameGeneratorDialog.vue  (+41 more)
apps/ui/src/composables/: dictationDiscard.test.ts  dictationDiscard.ts  useAiInline.test.ts  useAiInline.ts  useAutoSave.test.ts  useAutoSave.ts  useBeepAudio.ts  useCommandPalette.test.ts  useCommandPalette.ts  useCommandRegistry.test.ts  useCommandRegistry.ts  useDictation.test.ts  useDictation.ts  useEditorAutoSave.test.ts  useEditorAutoSave.ts  useEditorSettings.test.ts  useEditorSettings.ts  useFindReplace.ts  useIpcError.test.ts  useIpcError.ts  useNameGenerator.test.ts  useNameGenerator.ts  usePacemaker.test.ts  usePacemaker.ts  useProseMirrorSearch.test.ts  useProseMirrorSearch.ts  useReadAloud.test.ts  useReadAloud.ts  useShortcuts.test.ts  useShortcuts.ts  useTextDiff.test.ts  useTextDiff.ts  useTimerStorage.ts  useTypewriterScroll.ts  useUpdater.test.ts  useUpdater.ts  useWritingTimer.test.ts  useWritingTimer.ts
apps/ui/src/data/: names.ts
apps/ui/src/editor/: EditorToolbar.vue  (+2 more)
apps/ui/test/: setup.ts
docs/: ARCHITECTURE.md  AUTO-UPDATE.md  PRIVACY-POLICY.en.md  PRIVACY-POLICY.md  RELEASE-CHECKLIST.md  TEMPLATES-SPEC.md  TOS.en.md  TOS.md  USER-GUIDE.en.md  USER-GUIDE.md  VOICE-CATALOG.md  WORKFLOW.md
docs/ADR/: 0000-template.md  0001-tauri-sobre-electron.md  0002-sqlite-canonico-vs-por-proyecto.md  0003-service-traits-pattern.md  0004-dispatch-por-match-para-formatos-cerrados.md  0005-storage-service-trait-monolitico.md  0006-draffity-100-gratis.md  README.md
docs/plans/: 2026-06-05-auto-update-tauri.md
docs/specs/: 2026-06-05-auto-update-tauri-design.md
scripts/: build-update-manifest.mjs  build-update-manifest.test.mjs  sync-voice-manifest.mjs
(+73 files in other folders)
