[package]
name = "draffity-desktop"
version = "0.12.0"
description = "Draffity desktop (Tauri 2 + Rust)"
authors = ["Draffity"]
edition = "2021"
rust-version = "1.77"
default-run = "draffity-desktop"

[lib]
name = "draffity_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
ulid = { version = "1", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
docx-rs = "0.4"
epub-builder = "0.7"
html2md = "0.2"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
roxmltree = "0.20"
scraper = { version = "0.20", default-features = false }
ego-tree = "0.6"
zip = { version = "2", default-features = false, features = ["deflate"] }
biblatex = "0.10"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = "2"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service", "crypto-rust"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-serde = "0.0.12"
specta-typescript = "0.0.12"

[[bin]]
name = "gen-types"
path = "src/bin/gen_types.rs"

[features]
# this feature is used for production builds where `devUrl` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
