[package]
name = "draffity-desktop"
version = "0.12.0"
description = "Draffity desktop (Tauri 2 + Rust)"
authors = ["Aresoft SpA"]
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.77"
default-run = "draffity-desktop"

[lib]
name = "draffity_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
ulid = { version = "1", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
docx-rs = "0.4"
epub-builder = "0.7"
html2md = "0.2"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
roxmltree = "0.20"
scraper = { version = "0.20", default-features = false }
ego-tree = "0.6"
zip = { version = "2", default-features = false, features = ["deflate"] }
flate2 = "1"
tar = "0.4"
biblatex = "0.10"
sha2 = "0.10"
md-5 = "0.10"
base64 = "0.22"
ed25519-dalek = "2"
keyring = { version = "3", features = ["windows-native", "apple-native", "sync-secret-service", "crypto-rust"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart"] }
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-serde = "0.0.12"
specta-typescript = "0.0.12"
dirs = "5"

# Windows-only: grant the WebView2 microphone permission (wry does not).
# Versions pinned to match the ones tauri/wry already resolve to, so the
# COM types are identical across crates.
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "gen-types"
path = "src/bin/gen_types.rs"

[features]
# this feature is used for production builds where `devUrl` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
# NOTA: `panic = "abort"` es incompatible con html2md, que declara crate-type
# "dylib" (un dylib enlaza siempre el runtime panic_unwind). Se usa unwind.
